@@ -292,6 +292,7 @@ def _node_errors(builder, env, tlist, slist):
         if t.has_explicit_builder():
             if not t.env is None and not t.env is env:
                 action = t.builder.action
+
                 t_contents = t.builder.action.get_contents(tlist, slist, t.env)
                 contents = builder.action.get_contents(tlist, slist, env)
                 
